# enviro-deep-agent

./: .gitignore  README.md  docker-compose.yaml  id_ed25519  id_ed25519.pub  langgraph.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: avoid-unnecessary-markdown-reports.mdc
Neo4j/: __init__.py
Neo4j/connection/: __init__.py  conn.py  test_conn.py
Neo4j/create/: KnowledgeGraphDB.py  ingest_documents.py  usage_example.py
Neo4j/retrievers/: HybridCypher.py  (+6 more)
SimpleWorkflow/: .pdf_processor_state.json  .retry_enhanced.pid  .retry_state.json  00_START_HERE.md  CONSOLIDATION_COMPLETE.md  FAILURE_ROOT_CAUSE_ANALYSIS.md  FIXES_APPLIED.md  INDEX.md  NEW_SCRIPTS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OPTIMIZER_GUIDE.md  OPTIMIZER_SUMMARY.md  QUICK_REFERENCE.md  README.md  RETRY_SETUP_COMPLETE.md  USAGE_GUIDE.md  analyze_parsing_failures.py  benchmark_workers.py  manage_retry.sh  optimize_retry_workers.py  pdf_processor.py  retry_failed_files.py  retry_failed_files_enhanced.py  run_processing.sh  sample_fails.py  sql_metadata_to_parsed_markdown.py  sql_metadata_to_parsed_markdown_async.py  sql_metadata_to_parsed_markdown_optimized.py  sql_metadata_to_parsed_markdown_robust.py  summarize_markdown_outputs.py
agents/: ReAct.py  deep_agent.py
localPDFparse/: parse.py
nviro_airflow_parsing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
s3pdf_manager/: download_pdf.py  test_download_pdf.py
sql/: labeled_docs_parsed.py  show_metadata.py  validate_available_metadata.py
tools/: cypher_query_runner.py  graph_rag.py  hybrid_cypher_retriever.py
(+41240 files in other folders)
